--- a/_data/sidebars/mydoc_sidebar.yml
+++ b/_data/sidebars/mydoc_sidebar.yml
@@ -2,8 +2,8 @@
 
 entries:
 - title: sidebar
-  product: Jekyll Doc Theme
-  version: 6.0
+  product: Physis
+  version: 0.1
   folders:
 
   - title:
@@ -28,8 +28,8 @@ entries:
       output: web, pdf
       type: homepage
 
-    - title: Introduction
-      url: /mydoc_introduction.html
+    - title: Corpo Negro
+      url: /Corpo_negro.html
       output: web, pdf
 
     - title: Supported features
