--- a/_data/sidebars/mydoc_sidebar.yml
+++ b/_data/sidebars/mydoc_sidebar.yml
@@ -28,21 +28,21 @@ entries:
       output: web, pdf
 
 
-  - title: Tag archives
+  - title: Ainda nada
     output: web
     folderitems:
 
-    - title: Tag archives overview
-      url: /mydoc_tag_archives_overview.html
+    - title: Só um exemplo
+      url: /oi?
       output: web
 
       subfolders:
-      - title: Tag archive pages
+      - title: Subpasta, bem!
         output: web
         subfolderitems:
 
-        - title: Formatting pages
-          url: /tag_formatting.html
+        - title: Eita, mais nada
+          url: /tchau!
           output: web
 
         -
