--- a/_data/sidebars/mydoc_sidebar.yml
+++ b/_data/sidebars/mydoc_sidebar.yml
@@ -45,4 +45,11 @@ entries:
           url: /tchau!
           output: web
 
-        -
+          subsubfolder:
+          - title: Subsubpasta, bem!
+          output: web
+          subfolderitems:
+
+
+
+        
