--- a/_data/sidebars/mydoc_sidebar.yml
+++ b/_data/sidebars/mydoc_sidebar.yml
@@ -23,6 +23,10 @@ entries:
     output: web, pdf
     folderitems:
 
+    - title: Interação LMatéria
+      url: /Luz_e_Matéria.html
+      output: web, pdf
+
     - title: Corpo Negro
       url: /Corpo_negro.html
       output: web, pdf
