--- a/_data/sidebars/mydoc_sidebar.yml
+++ b/_data/sidebars/mydoc_sidebar.yml
@@ -23,9 +23,25 @@ entries:
     output: web, pdf
     folderitems:
 
-    - title: Interação Luz/Matéria
-      url: /Luz_e_Materia.html
-      output: web, pdf
+    subfolders:
+      - title: O Problema do Corpo Negro!
+        output: web
+        subfolderitems:
+
+        - title: Interação Luz/Matéria
+         url: /Luz_e_Materia.html
+          output: web, pdf
+
+        - title: Lei de Stefan-Boltzmann
+         url: /Lei_de_Stefan.html
+          output: web, pdf
+
+        - title: Lei de Planck
+         url: /Lei_de_Planck.html
+          output: web, pdf
+
+
+    
 
     - title: Corpo Negro
       url: /Corpo_negro.html
