--- a/_data/sidebars/mydoc_sidebar.yml
+++ b/_data/sidebars/mydoc_sidebar.yml
@@ -17,38 +17,8 @@ entries:
       output: pdf
       type: frontmatter
 
-    - title: Física Moderna
-      output: web, pdf
-      folderitems:
 
-      - title: Interação Luz/Matéria
-      url: /Luz_e_Materia.html
-      output: web, pdf
-
-      - title: Lei de Stefan-Boltzmann
-      url: /Lei_de_Stefan.html
-      output: web, pdf
-
-      - title: Lei de Planck
-      url: /Lei_de_Planck.html
-      output: web, pdf
-
-    subfolders:
-      - title: O Problema do Corpo Negro!
-        output: web
-        subfolderitems:
-
-
-
-
-    
-
-    - title: Corpo Negro
-      url: /Corpo_negro.html
-      output: web, pdf
-
-
-  - title: Ainda nada
+  - title: Física Moderna
     output: web
     folderitems:
 
@@ -57,18 +27,21 @@ entries:
       output: web
 
       subfolders:
-      - title: Subpasta, bem!
+      - title: Problema do Corpo Negro
         output: web
         subfolderitems:
 
-        - title: Eita, mais nada
-          url: /tchau!
+        - title: Interação Luz/Matéria
+          url: /Luz_e_Materia.html
           output: web
 
-          subsubfolder:
-          - title: Subsubpasta, bem!
+        - title: Lei de Stefan/Boltzmann
+          url: /Lei_de_Stefan.html
           output: web
-          subfolderitems:
+
+        - title: Lei de Planck
+          url: /Luz_de_Planck.html
+          output: web
 
 
 
