--- a/_data/sidebars/mydoc_sidebar.yml
+++ b/_data/sidebars/mydoc_sidebar.yml
@@ -40,7 +40,7 @@ entries:
           output: web
 
         - title: Lei de Planck
-          url: /Luz_de_Planck.html
+          url: /Lei_de_Planck.html
           output: web
 
 
